fixed localization form on mobile

--- a/assets/component-localization-form.css
+++ b/assets/component-localization-form.css
@@ -244,12 +244,6 @@
   }
 
   .disclosure__list-wrapper.country-selector {
-    position: fixed;
-    bottom: -1rem;
-    left: 0;
-    width: 100%;
-    height: 80%;
-    max-height: 80vh;
     border-radius: 0;
     border: none;
     box-shadow: none;
