--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -149,7 +149,12 @@
   display: flex;
   align-items: flex-end;
   gap: 1rem;
-  min-width: 328px;
+}
+
+@media (min-width: 360px) {
+  .footer-block--newsletter {
+    min-width: 328px;
+  }
 }
 
 .newsletter-head,
@@ -202,10 +207,6 @@
 
 .footer-block__newsletter {
   flex-grow: 1;
-}
-
-.newsletter-form__field-wrapper {
-  max-width: 36rem;
 }
 
 .field__input {
